--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,202 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/display"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#171616"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/plus"
+        android:layout_width="127dp"
+        android:layout_height="64dp"
+        android:background="#007FD4"
+        android:text="+"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="436dp" />
+
+    <Button
+        android:id="@+id/div"
+        android:layout_width="127dp"
+        android:layout_height="64dp"
+        android:background="#007FD4"
+        android:text="/"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="240dp"
+        tools:layout_editor_absoluteY="537dp" />
+
+    <Button
+        android:id="@+id/minus"
+        android:layout_width="127dp"
+        android:layout_height="64dp"
+        android:background="#007FD4"
+        android:text="-"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="240dp"
+        tools:layout_editor_absoluteY="436dp" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/t1"
+        android:layout_width="356dp"
+        android:layout_height="61dp"
+        android:background="#A6BED1"
+        android:text="00"
+        android:textColor="#AA0F0F"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="30dp" />
+
+    <Button
+        android:id="@+id/b1"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="1"
+        app:flow_verticalAlign="top"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="124dp" />
+
+    <Button
+        android:id="@+id/b3"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="3"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="279dp"
+        tools:layout_editor_absoluteY="124dp" />
+
+    <Button
+        android:id="@+id/b5"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="5"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="197dp" />
+
+    <Button
+        android:id="@+id/b2"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="2"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="124dp" />
+
+    <Button
+        android:id="@+id/pi"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="pi"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="355dp" />
+
+    <Button
+        android:id="@+id/decimal"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="."
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="279dp"
+        tools:layout_editor_absoluteY="355dp" />
+
+    <Button
+        android:id="@+id/b4"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="4"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="197dp" />
+
+    <Button
+        android:id="@+id/b8"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="8"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <Button
+        android:id="@+id/b6"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="6"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="279dp"
+        tools:layout_editor_absoluteY="197dp" />
+
+    <Button
+        android:id="@+id/b9"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="9"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="279dp"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <Button
+        android:id="@+id/b7"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="7"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="276dp" />
+
+    <Button
+        android:id="@+id/b0"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:background="#ED5711"
+        android:text="0"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="baseline"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="355dp" />
+
+    <Button
+        android:id="@+id/multi"
+        android:layout_width="127dp"
+        android:layout_height="64dp"
+        android:background="#007FD4"
+        android:text="*"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="537dp" />
+
+    <Button
+        android:id="@+id/equal"
+        android:layout_width="319dp"
+        android:layout_height="65dp"
+        android:background="#D3D6CF"
+        android:text="="
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="630dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
